syntax = "proto3";
package subnet_dpn.user_online_point;

message ProtoUserOnlinePoint {
    string user_addr = 1;
    string login_session_id = 2;
    string masternode_id = 3;
    int64 poll_at = 4;
    int64 last_poll_at = 5;
}